--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body{
 .button {
 	display: block;
 	cursor: pointer;
-	background-color: var();
+	background-color: var(--button-color);
 	color: var(--primary-text-color);
 	font-family: inherit;
 	font-size: 16px;
