--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 	--first-word-color:#2196F3;
 	--button-color:#F5F4FA;
 	--footer-link-color:#FFFFFF99;
-	--section-foure-color:#E5E5E5;
+	--section-foure-color:#F5F4FA;
 	--second-word-color:#000000;
 }
 
